--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.13.1"
+actix-web = "4.4.0"
 serde = "1.0.193"
 serde_json = "1.0.108"
-sqlx = "0.7.2"
+sqlx = {version = "0.7.2", features = ["postgres", "time"]}
