--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.4.0"
+lazy_static = "1.4.0"
 serde = "1.0.193"
 serde_json = "1.0.108"
 sqlx = {version = "0.7.2", features = ["postgres", "time"]}
