--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.4.0"
+async_once = "0.2.6"
+async_static = "0.1.3"
+dotenv = "0.15.0"
 lazy_static = "1.4.0"
 serde = "1.0.193"
 serde_json = "1.0.108"
