--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 actix-web = "4.4.0"
 async_once = "0.2.6"
 async_static = "0.1.3"
+chrono = {version = "0.4.31", features = ["serde"]}
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
+regex = "1.10.2"
 serde = "1.0.193"
 serde_json = "1.0.108"
-sqlx = {version = "0.7.2", features = ["postgres", "time"]}
+sqlx = {version = "0.7.2", features = ["postgres", "time", "chrono"]}
