--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ lazy_static = "1.4.0"
 regex = "1.10.2"
 serde = "1.0.193"
 serde_json = "1.0.108"
-sqlx = {version = "0.7.2", features = ["postgres", "time", "chrono"]}
+sqlx = {version = "0.7.2", features = ["postgres", "time", "chrono", "uuid"]}
