--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = {version = "4.4.0", features = ["openssl"]}
+actix-web = {version = "*", features = ["openssl"]}
 async-recursion = "1.0.5"
 async_once = "0.2.6"
 async_static = "0.1.3"
@@ -14,8 +14,6 @@ chrono = {version = "0.4.31", features = ["serde"]}
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
 openssl = "0.10.61"
-prost = "0.12.3"
-prost-types = "0.12.3"
 regex = "1.10.2"
 serde = "1.0.193"
 serde_json = "1.0.108"
