--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ async-recursion = "1.0.5"
 async_once = "0.2.6"
 async_static = "0.1.3"
 chrono = {version = "0.4.31", features = ["serde"]}
+colored = "2.1.0"
 dotenv = "0.15.0"
+futures = "0.3.30"
 lazy_static = "1.4.0"
 openssl = "0.10.61"
 regex = "1.10.2"
